syntax = "proto3";

option java_package = "de.bwueller.environment.protocol";

import "general.proto";

message RegisterActorRequest {
  string name = 1;
  repeated Meta meta = 2; // Data is sent to the user when connecting to the processor.
}

message RegisterActorResponse {
  string identifier = 1; // The identifier will be generated by the processor if the connection was successful.
  Status status = 2;

  enum Status {
    SUC_CONNECTED = 0;
    ERR_ALREADY_CONNECTED = 1;
    ERR_UNKNOWN = 2;
  }
}
