syntax = "proto3";

option java_package = "de.bwueller.environment.protocol";

message UnregisterActorUserRequest {
  string user = 1; // Unique user identifier.
}
