syntax = "proto3";

option java_package = "de.bwueller.environment.protocol";

message RegisterActorUserRequest {
  string user = 1; // Global non-changing user identifier.
}

message RegisterActorUserResponse {
  string user = 1;
  string key = 2;
}
